# rotatePlugin

./: README.md
src/: rotatePlugin.cabal
src/example/: LinearRotatePlugin.hs  Main.hs  VectRotatePlugin.hs
src/src/: TestRotatePlugin.hs
