name:          rotatePlugin
category:      Language
version:       0
license:       BSD2
cabal-version: 2.0
author:        Fog
maintainer:    Fog
stability:     experimental
build-type:    Simple
synopsis:      eg of how to use backpack to provide a "plugin"
description:   extends the rotate signature to include vector multiplication by a scalar.

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  signatures: RotatePlugin
  exposed-modules: TestRotatePlugin
  build-depends: base, rotate

library example
  default-language: Haskell2010
  hs-source-dirs: example
  exposed-modules: LinearRotatePlugin, VectRotatePlugin
  build-depends: base, linear, vect, rotate

executable rotatePlugin-example
  default-language: Haskell2010
  main-is: example/Main.hs
  build-depends: base, rotate,rotatePlugin, example
  mixins: rotatePlugin (TestRotatePlugin as Linear.TestRotatePlugin) requires (RotatePlugin as LinearRotatePlugin)
  mixins: rotatePlugin (TestRotatePlugin as Vect.TestRotatePlugin  ) requires (RotatePlugin as VectRotatePlugin  )

 	